--- a/.env.qa
+++ b/.env.qa
@@ -1,3 +1,5 @@
-REACT_APP_API_ENDPOINT = "https://qa-clinical-intake.allevia.md"
+REACT_APP_API_ENDPOINT = "https://clinical-intake.allevia.md"
+REACT_APP_API_BASE_ENDPOINT = "https://api.nagorikcommittee.org/jnc-backend"
 REACT_APP_API_PATH = "api"
 REACT_APP_API_VERSION = "v1"
+REACT_APP_API_PUBLIC = "public"
