--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,4 @@
-REACT_APP_API_ENDPOINT = "https://clinical-intake.allevia.md"
+REACT_APP_API_ENDPOINT = "https://stg-clinical-intake.allevia.md"
 REACT_APP_API_BASE_ENDPOINT = "https://api.nagorikcommittee.org/jnc-backend"
 REACT_APP_API_PATH = "api"
 REACT_APP_API_VERSION = "v1"
