--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"react-dom": "^18.2.0",
 		"react-json-view": "^1.21.3",
 		"react-redux": "^8.0.7",
-		"react-router-dom": "^6.11.2",
+		"react-router-dom": "6.28.2",
 		"tss-react": "^4.8.4",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
