--- a/.env.staging
+++ b/.env.staging
@@ -3,3 +3,4 @@ REACT_APP_API_BASE_ENDPOINT = "https://api.nagorikcommittee.org/jnc-backend"
 REACT_APP_API_PATH = "api"
 REACT_APP_API_VERSION = "v1"
 REACT_APP_API_PUBLIC = "public"
+REACT_APP_API_PRIVATE = "private"
